Fixed inconsistent button ordering when wrapped

--- a/src/styles/components/_form-input.scss
+++ b/src/styles/components/_form-input.scss
@@ -186,7 +186,7 @@
 }
 .mynah-chat-item-buttons-container {
     display: flex;
-    flex-flow: row-reverse wrap;
+    flex-flow: row-reverse wrap-reverse;
     gap: var(--mynah-sizing-2);
     overflow: hidden;
     padding-top: var(--mynah-sizing-1);
